Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -50,16 +50,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2025-11-06 14:32:36--  https://www.himalayandatabase.com/downloads/Himalayan%20Database.zip\n",
+            "--2025-11-06 15:02:34--  https://www.himalayandatabase.com/downloads/Himalayan%20Database.zip\n",
             "Resolving www.himalayandatabase.com (www.himalayandatabase.com)... 66.96.146.129\n",
             "Connecting to www.himalayandatabase.com (www.himalayandatabase.com)|66.96.146.129|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 42737250 (41M) [application/zip]\n",
             "Saving to: ‘himalaya.zip’\n",
             "\n",
-            "himalaya.zip        100%[===================>]  40.76M  40.3MB/s    in 1.0s    \n",
+            "himalaya.zip        100%[===================>]  40.76M  37.6MB/s    in 1.1s    \n",
             "\n",
-            "2025-11-06 14:32:42 (40.3 MB/s) - ‘himalaya.zip’ saved [42737250/42737250]\n",
+            "2025-11-06 15:02:36 (37.6 MB/s) - ‘himalaya.zip’ saved [42737250/42737250]\n",
             "\n"
           ]
         }
@@ -83,7 +83,7 @@
         {
           "data": {
             "text/plain": [
-              "'/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpz2gf9o0y'"
+              "'/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpa0ubj2re'"
             ]
           },
           "execution_count": 2,
@@ -117,8 +117,8 @@
         {
           "data": {
             "text/plain": [
-              "('/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpz2gf9o0y/Himalayan Database/HIMDATA/peaks.DBF',\n",
-              " '/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpz2gf9o0y/Himalayan Database/HIMDATA/exped.DBF')"
+              "('/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpa0ubj2re/Himalayan Database/HIMDATA/peaks.DBF',\n",
+              " '/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpa0ubj2re/Himalayan Database/HIMDATA/exped.DBF')"
             ]
           },
           "execution_count": 3,
@@ -520,7 +520,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "72ee166e-0379-4478-8eb3-03e22955fde5",
+              "ref": "edd043f2-c68a-4797-85eb-dcb2eb8ee7dd",
               "rows": [
                 [
                   "0",
@@ -1278,7 +1278,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "5f41e094-4ca4-40b7-aafb-92fd0ae13da7",
+              "ref": "b6c8d816-5680-46d9-9d72-8a95e7e0ed47",
               "rows": [
                 [
                   "10416",
@@ -2015,7 +2015,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "99d42111-da87-44cc-ab64-c0099f545a06",
+              "ref": "c313412c-17e4-44ea-a034-c4abd8bf77cf",
               "rows": [
                 [
                   "0",
@@ -2839,7 +2839,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "314139bd-88cd-48fa-92a9-20de030fa10e",
+              "ref": "45207183-540a-405d-853c-a8638fc67a4e",
               "rows": [
                 [
                   "10416",
@@ -4273,7 +4273,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "7d5d08e4-080f-44c3-9321-3f3917fdebbd",
+              "ref": "a5714b49-bfd6-44fc-9419-27fe62659737",
               "rows": [
                 [
                   "count",
@@ -4607,7 +4607,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "35265acc-bd67-4932-acab-6fa86bff985a",
+              "ref": "656e68a9-3606-4bdd-bc7b-3aa61299cf26",
               "rows": [
                 [
                   "count",
@@ -5070,7 +5070,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "c051ec8a-b441-44aa-b015-7a3d6b3e0500",
+              "ref": "65a307df-48c2-4493-bf5b-a30f871a07b9",
               "rows": [
                 [
                   "Kanti/Palchung",
@@ -5425,7 +5425,7 @@
                   "type": "unknown"
                 }
               ],
-              "ref": "7ae05c60-f296-4ce6-9bf9-8b948980df54",
+              "ref": "a7562c6e-ec3d-438e-848e-884e368ae68c",
               "rows": [
                 [
                   "Annapurna",
@@ -5574,7 +5574,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "d6f9bef9-29a0-4353-8a4f-a73661c2ac80",
+              "ref": "f066447f-09e6-4d6f-a6a3-8e60f12ec50a",
               "rows": [
                 [
                   "Khumbu",
@@ -5767,7 +5767,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "5d46050b-f5bc-4cd7-8092-a5a8b4304aaa",
+              "ref": "4a03e88e-f757-4619-9252-28777ed21e5e",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -5916,7 +5916,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "783aedd4-221b-4708-8b2c-ce7c730f8ce9",
+              "ref": "d30f8fab-c4a4-49a2-a532-3a9d18cf2bdd",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -6103,7 +6103,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "c5801df8-f0f1-427d-871d-5e559f0de58f",
+              "ref": "b17be095-ee5b-47b1-9ca2-39402911286e",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -6548,7 +6548,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_48416/2037827857.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_50645/2037827857.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
             "  height_distribution = pd.pivot_table(\n"
           ]
         },
@@ -6572,7 +6572,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "a8ac397b-807f-4323-b34a-5ea16a42db32",
+              "ref": "f70d2812-2ee1-4b07-9956-aa729f5f03f9",
               "rows": [
                 [
                   "6000-6499",
@@ -6791,7 +6791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 65,
       "metadata": {
         "id": "-rJFBmeN1Lpl"
       },
@@ -6877,7 +6877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -6895,7 +6895,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "95ec9e4d-6156-40f3-af5e-d2105c35730c",
+              "ref": "599ff51a-2bc7-4280-ab8c-cb8d1e4c1e0e",
               "rows": [
                 [
                   "1",
@@ -6978,7 +6978,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -6992,7 +6992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "ZGU2cK4s1OE4"
       },
@@ -7028,7 +7028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -7386,7 +7386,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "e4728b3d-d4f9-4b89-b214-cbf85370ec2a",
+              "ref": "ac4821fb-7e9f-4053-9e95-0c25b9ff5945",
               "rows": [
                 [
                   "10416",
@@ -7947,13 +7947,41 @@
               "[5 rows x 69 columns]"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "exped_tidy.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# NOTE: Boolean negation in pandas\n",
+        "# --------------------------------\n",
+        "# In pandas, `~` is the boolean NOT operator for Series.\n",
+        "# It flips True ↔ False and is cleaner than writing:\n",
+        "#     (df['col'] == False)\n",
+        "#\n",
+        "# Example:\n",
+        "#     df['NOHIRED']          → True, False, True\n",
+        "#     ~df['NOHIRED']         → False, True, False\n",
+        "#\n",
+        "# Usage in filters:\n",
+        "#     df[df['NOHIRED']]      → rows with NOHIRED == True\n",
+        "#     df[~df['NOHIRED']]     → rows with NOHIRED == False\n",
+        "#\n",
+        "# I replaced:\n",
+        "#     (df['NOHIRED'] == False)\n",
+        "# with:\n",
+        "#     ~df['NOHIRED']\n",
+        "#\n",
+        "# This is more idiomatic, shorter, and avoids unnecessary comparisons."
       ]
     },
     {
@@ -7967,8 +7995,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "4\n",
-            "2\n"
+            "7\n",
+            "35\n"
           ]
         }
       ],
@@ -7976,13 +8004,33 @@
         "# 7. Are expeditions with no hired personnel (NOHIRED) associated with higher or\n",
         "# lower death rates?\n",
         "\n",
-        "exped_tidy['TOTAL_DEATHS'] = exped_tidy['MDEATHS'] + exped_tidy['HDEATHS']\n",
-        "exped_tidy['TOTAL_DEATHS'].sum()"
+        "# Calculate total deaths\n",
+        "exped_tidy.loc[:, 'TOTAL_DEATHS'] = exped_tidy['MDEATHS'] + exped_tidy['HDEATHS']\n",
+        "int(exped_tidy['TOTAL_DEATHS'].sum())\n",
+        "\n",
+        "# Masks\n",
+        "no_hired = exped_tidy['NOHIRED']\n",
+        "hired = ~exped_tidy['NOHIRED']\n",
+        "\n",
+        "# Calculate death count by whether groups hired personnel\n",
+        "\n",
+        "death_count_no_hired = (hired & (exped_tidy['TOTAL_DEATHS'] > 0)).sum()\n",
+        "death_count_hired = (no_hired & (exped_tidy['TOTAL_DEATHS'] > 0)).sum()\n",
+        "\n",
+        "# Total expeditions in each category\n",
+        "total_no_hired = no_hired.sum()\n",
+        "total_hired = hired.sum()\n",
+        "\n",
+        "# Death rates\n",
+        "death_rate_no_hired = death_count_no_hired / total_no_hired\n",
+        "death_rate_hired = death_count_hired / total_hired\n",
+        "\n",
+        "death_rate_no_hired, death_rate_hired\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "3323nhIj1PNJ"
       },
@@ -7993,7 +8041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
         "id": "lOjqJIWBHNaz"
       },
