--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -50,16 +50,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2025-11-06 15:02:34--  https://www.himalayandatabase.com/downloads/Himalayan%20Database.zip\n",
+            "--2025-11-06 16:03:36--  https://www.himalayandatabase.com/downloads/Himalayan%20Database.zip\n",
             "Resolving www.himalayandatabase.com (www.himalayandatabase.com)... 66.96.146.129\n",
             "Connecting to www.himalayandatabase.com (www.himalayandatabase.com)|66.96.146.129|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 42737250 (41M) [application/zip]\n",
             "Saving to: ‘himalaya.zip’\n",
             "\n",
-            "himalaya.zip        100%[===================>]  40.76M  37.6MB/s    in 1.1s    \n",
+            "himalaya.zip        100%[===================>]  40.76M  39.3MB/s    in 1.0s    \n",
             "\n",
-            "2025-11-06 15:02:36 (37.6 MB/s) - ‘himalaya.zip’ saved [42737250/42737250]\n",
+            "2025-11-06 16:03:37 (39.3 MB/s) - ‘himalaya.zip’ saved [42737250/42737250]\n",
             "\n"
           ]
         }
@@ -83,7 +83,7 @@
         {
           "data": {
             "text/plain": [
-              "'/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpa0ubj2re'"
+              "'/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpsu_yh84x'"
             ]
           },
           "execution_count": 2,
@@ -117,8 +117,8 @@
         {
           "data": {
             "text/plain": [
-              "('/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpa0ubj2re/Himalayan Database/HIMDATA/peaks.DBF',\n",
-              " '/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpa0ubj2re/Himalayan Database/HIMDATA/exped.DBF')"
+              "('/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpsu_yh84x/Himalayan Database/HIMDATA/peaks.DBF',\n",
+              " '/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/tmpsu_yh84x/Himalayan Database/HIMDATA/exped.DBF')"
             ]
           },
           "execution_count": 3,
@@ -520,7 +520,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "edd043f2-c68a-4797-85eb-dcb2eb8ee7dd",
+              "ref": "cdcec557-e1bd-47ee-b9b8-2a3ad3a80e4e",
               "rows": [
                 [
                   "0",
@@ -1278,7 +1278,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "b6c8d816-5680-46d9-9d72-8a95e7e0ed47",
+              "ref": "9e7f0043-d235-426b-ad17-f6aa02f7e5dd",
               "rows": [
                 [
                   "10416",
@@ -2015,7 +2015,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "c313412c-17e4-44ea-a034-c4abd8bf77cf",
+              "ref": "51bd1f3a-c560-4718-b188-df294e87f85c",
               "rows": [
                 [
                   "0",
@@ -2839,7 +2839,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "45207183-540a-405d-853c-a8638fc67a4e",
+              "ref": "0250ed3c-bd05-4bf3-8644-cc5d2c7cf359",
               "rows": [
                 [
                   "10416",
@@ -4273,7 +4273,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "a5714b49-bfd6-44fc-9419-27fe62659737",
+              "ref": "ba4dde7f-0e75-45b9-b4c4-0f6581018b0c",
               "rows": [
                 [
                   "count",
@@ -4607,7 +4607,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "656e68a9-3606-4bdd-bc7b-3aa61299cf26",
+              "ref": "3da16708-be49-4f91-b454-9c13ff5ce65f",
               "rows": [
                 [
                   "count",
@@ -5070,7 +5070,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "65a307df-48c2-4493-bf5b-a30f871a07b9",
+              "ref": "1000b9c7-814d-46c7-95f8-5e65a85cb0d4",
               "rows": [
                 [
                   "Kanti/Palchung",
@@ -5425,7 +5425,7 @@
                   "type": "unknown"
                 }
               ],
-              "ref": "a7562c6e-ec3d-438e-848e-884e368ae68c",
+              "ref": "3633ed20-304c-4c01-80da-7de9c6327e5e",
               "rows": [
                 [
                   "Annapurna",
@@ -5574,7 +5574,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "f066447f-09e6-4d6f-a6a3-8e60f12ec50a",
+              "ref": "dc08ec5d-ff8c-4994-af7c-5f0f63037080",
               "rows": [
                 [
                   "Khumbu",
@@ -5767,7 +5767,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "4a03e88e-f757-4619-9252-28777ed21e5e",
+              "ref": "7767620e-6597-48ea-a5de-f20b988c73bc",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -5916,7 +5916,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "d30f8fab-c4a4-49a2-a532-3a9d18cf2bdd",
+              "ref": "6432d098-949b-4a90-a343-3731517ac4a0",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -6103,7 +6103,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "b17be095-ee5b-47b1-9ca2-39402911286e",
+              "ref": "2462c0fd-7c54-4082-b452-7afd2bb59265",
               "rows": [
                 [
                   "Kangchenjunga/Simhalila",
@@ -6548,7 +6548,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_50645/2037827857.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_53999/2037827857.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
             "  height_distribution = pd.pivot_table(\n"
           ]
         },
@@ -6572,7 +6572,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "f70d2812-2ee1-4b07-9956-aa729f5f03f9",
+              "ref": "2a3b5618-d505-40ee-aee4-dc2576137419",
               "rows": [
                 [
                   "6000-6499",
@@ -6791,7 +6791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 42,
       "metadata": {
         "id": "-rJFBmeN1Lpl"
       },
@@ -6895,7 +6895,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "599ff51a-2bc7-4280-ab8c-cb8d1e4c1e0e",
+              "ref": "5570adbc-614c-4a81-b30c-3e418cef851b",
               "rows": [
                 [
                   "1",
@@ -7386,7 +7386,7 @@
                   "type": "string"
                 }
               ],
-              "ref": "ac4821fb-7e9f-4053-9e95-0c25b9ff5945",
+              "ref": "c67102c5-b24c-45fc-82cb-db7712fd6fd9",
               "rows": [
                 [
                   "10416",
@@ -7958,7 +7958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -7995,8 +7995,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "7\n",
-            "35\n"
+            "Death rate with no hired personnel: 4.00%, Death rate with hired personnel: 4.09%\n"
           ]
         }
       ],
@@ -8004,18 +8003,27 @@
         "# 7. Are expeditions with no hired personnel (NOHIRED) associated with higher or\n",
         "# lower death rates?\n",
         "\n",
+        "# Create a copy of the DataFrame to avoid SettingWithCopyWarning before adding TOTAL_DEATHS\n",
+        "exped_tidy = exped_tidy.copy()\n",
+        "\n",
         "# Calculate total deaths\n",
         "exped_tidy.loc[:, 'TOTAL_DEATHS'] = exped_tidy['MDEATHS'] + exped_tidy['HDEATHS']\n",
         "int(exped_tidy['TOTAL_DEATHS'].sum())\n",
         "\n",
         "# Masks\n",
+        "\n",
+        "# In data science, a mask is basically a boolean array or series that “marks” \n",
+        "# which rows (or elements) of your dataset meet a certain condition. \n",
+        "# You can then use it to filter, select, or compute on only those rows.\n",
+        "# A mask acts like a stencil: it highlights the data you want and hides the rest.\n",
+        "\n",
         "no_hired = exped_tidy['NOHIRED']\n",
         "hired = ~exped_tidy['NOHIRED']\n",
         "\n",
         "# Calculate death count by whether groups hired personnel\n",
         "\n",
-        "death_count_no_hired = (hired & (exped_tidy['TOTAL_DEATHS'] > 0)).sum()\n",
-        "death_count_hired = (no_hired & (exped_tidy['TOTAL_DEATHS'] > 0)).sum()\n",
+        "death_count_no_hired = (no_hired & (exped_tidy['TOTAL_DEATHS'] > 0)).sum()\n",
+        "death_count_hired = (hired & (exped_tidy['TOTAL_DEATHS'] > 0)).sum()\n",
         "\n",
         "# Total expeditions in each category\n",
         "total_no_hired = no_hired.sum()\n",
@@ -8025,12 +8033,17 @@
         "death_rate_no_hired = death_count_no_hired / total_no_hired\n",
         "death_rate_hired = death_count_hired / total_hired\n",
         "\n",
-        "death_rate_no_hired, death_rate_hired\n"
+        "print(f\"Death rate with no hired personnel: {death_rate_no_hired:.2%}, Death rate with hired personnel: {death_rate_hired:.2%}\")\n",
+        "\n",
+        "# Expeditions with no hired personnel had a death rate of 4.0%, \n",
+        "# while expeditions that hired personnel had a nearly identical \n",
+        "# death rate of 4.1%. This suggests that hiring personnel is not \n",
+        "# associated with a meaningful difference in expedition mortality."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 48,
       "metadata": {
         "id": "3323nhIj1PNJ"
       },
@@ -8041,7 +8054,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 49,
       "metadata": {
         "id": "lOjqJIWBHNaz"
       },
