--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -8043,25 +8043,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "3323nhIj1PNJ"
       },
       "outputs": [],
       "source": [
-        "# 8. How many climbers successfully reached the top of each peak?"
+        "# 8. How many climbers successfully reached the top of each peak?\n",
+        "\n",
+        "cknekncecnln"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "lOjqJIWBHNaz"
       },
       "outputs": [],
       "source": [
         "# 9. Can we predict whether a climber will summit a peak based on year, month, peak, and climber characteristics?\n",
-        "#  (may need to expand to full dataset)"
+        "#  (may need to expand to full dataset)\n"
       ]
     },
     {
@@ -8100,9 +8102,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "tidy-pydy-tuesday",
+      "display_name": "Expeditions (.venv)",
       "language": "python",
-      "name": "python3"
+      "name": "expeditions-venv"
     },
     "language_info": {
       "codemirror_mode": {
