--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -10094,7 +10094,7 @@
         "# Display top 20 features\n",
         "print(feature_importances.head(20))\n",
         "\n",
-        "# Optional: Plot top 20 features\n",
+        "# Plot top 20 features\n",
         "plt.figure(figsize=(8,6))\n",
         "sns.barplot(x=feature_importances.head(20), y=feature_importances.head(20).index)\n",
         "plt.title(\"Top 20 Feature Importances\")\n",
@@ -10212,25 +10212,6 @@
       "metadata": {},
       "outputs": [
         {
-          "ename": "AttributeError",
-          "evalue": "'LogisticRegression' object has no attribute 'feature_importances_'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[65]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m feature_importances = pd.Series(\u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfeature_importances_\u001b[49m, index=X_train.columns)\n\u001b[32m      2\u001b[39m feature_importances = feature_importances.sort_values(ascending=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Display top 20 features\u001b[39;00m\n",
-            "\u001b[31mAttributeError\u001b[39m: 'LogisticRegression' object has no attribute 'feature_importances_'"
-          ]
-        }
-      ],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
@@ -10295,9 +10276,81 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/stann-omar.jones/Projects/github-repos/tidy-pydy-tuesday/2025_01_21_himalayan_expeditions/.venv/lib/python3.11/site-packages/xgboost/training.py:199: UserWarning: [17:19:04] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:790: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
+            "\n",
+            "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.99      0.79      0.88       200\n",
+            "           1       0.09      0.67      0.15         6\n",
+            "\n",
+            "    accuracy                           0.79       206\n",
+            "   macro avg       0.54      0.73      0.52       206\n",
+            "weighted avg       0.96      0.79      0.86       206\n",
+            "\n",
+            "[[158  42]\n",
+            " [  2   4]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import xgboost as xgb\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "# --- 4. Set up XGBoost classifier ---\n",
+        "# Use scale_pos_weight to handle class imbalance\n",
+        "# scale_pos_weight = (# negative samples / # positive samples)\n",
+        "neg, pos = (y_train == 0).sum(), (y_train == 1).sum()\n",
+        "scale_pos_weight = neg / pos\n",
+        "\n",
+        "xgb_model = xgb.XGBClassifier(\n",
+        "    random_state=42,\n",
+        "    use_label_encoder=False,\n",
+        "    eval_metric='logloss',\n",
+        "    scale_pos_weight=scale_pos_weight,\n",
+        "    n_estimators=500,\n",
+        "    max_depth=3,\n",
+        "    learning_rate=0.05\n",
+        ")\n",
+        "\n",
+        "xgb_model.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred = xgb_model.predict(X_test)\n",
+        "\n",
+        "print(classification_report(y_test, y_pred))\n",
+        "print(confusion_matrix(y_test, y_pred))\n",
+        "\n",
+        "# Majority class (No Death): Well-predicted, though recall dropped from 0.91 (RF) → 0.79.\n",
+        "# Minority class (Death): Recall is decent (0.67), but precision is extremely low (0.09) → most “death” predictions are false positives.\n",
+        "# Overall accuracy: Misleading due to heavy imbalance; don’t rely on it.\n",
+        "# XGBoost is similar to Random Forest for this rare event problem: captures most actual deaths (recall) \n",
+        "# but produces too many false alarms (low precision)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "With only ~1,030 expeditions and 6 deaths, none of the models we used are particularly accurate since the minority class is extremely small."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
