--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -10345,7 +10345,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "With only ~1,030 expeditions and 6 deaths, none of the models we used are particularly accurate since the minority class is extremely small."
+        "With only ~1,030 expeditions and 6 deaths, the models we tested are not very accurate due to the extreme imbalance of the minority class. The best solution would be to expand to the full Himalaya dataset from 1950 to the present, since we limited our analysis to just four years (2020–2024)."
       ]
     },
     {
