--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -8180,7 +8180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -8343,14 +8343,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_60951/2506227870.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+            "/var/folders/7t/nscydqzn0_zd1gy0r57jw6_c0000gp/T/ipykernel_60951/1301481598.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
             "  grouped = exped_tidy.groupby('SIZE_BIN')['HAS_DEATH']\n"
           ]
         },
@@ -8364,63 +8364,175 @@
                   "type": "unknown"
                 },
                 {
-                  "name": "HAS_DEATH",
+                  "name": "death_rate",
+                  "rawType": "float64",
+                  "type": "float"
+                },
+                {
+                  "name": "ci_lower",
+                  "rawType": "float64",
+                  "type": "float"
+                },
+                {
+                  "name": "ci_upper",
                   "rawType": "float64",
                   "type": "float"
                 }
               ],
-              "ref": "a77a24d9-f303-46b2-9532-f72190fb6de4",
+              "ref": "1c72685c-afae-4675-a42d-2bcb8fec5f58",
               "rows": [
                 [
                   "<5",
-                  "2.2573363431151243"
+                  "2.2573363431151243",
+                  "1.2306720697069344",
+                  "4.104880026022187"
                 ],
                 [
                   "6-10",
-                  "3.731343283582089"
+                  "3.731343283582089",
+                  "2.039201018725596",
+                  "6.731153188511015"
                 ],
                 [
                   "11-15",
-                  "5.319148936170213"
+                  "5.319148936170213",
+                  "2.9145921355217896",
+                  "9.513096314750946"
                 ],
                 [
                   "16-20",
-                  "6.451612903225806"
+                  "6.451612903225806",
+                  "2.537290552044079",
+                  "15.447515727752881"
                 ],
                 [
                   "21-50",
-                  "13.461538461538462"
+                  "13.461538461538462",
+                  "6.676881705396139",
+                  "25.2733201651938"
                 ]
               ],
               "shape": {
-                "columns": 1,
+                "columns": 3,
                 "rows": 5
               }
             },
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>death_rate</th>\n",
+              "      <th>ci_lower</th>\n",
+              "      <th>ci_upper</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SIZE_BIN</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>&lt;5</th>\n",
+              "      <td>2.257336</td>\n",
+              "      <td>1.230672</td>\n",
+              "      <td>4.104880</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6-10</th>\n",
+              "      <td>3.731343</td>\n",
+              "      <td>2.039201</td>\n",
+              "      <td>6.731153</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11-15</th>\n",
+              "      <td>5.319149</td>\n",
+              "      <td>2.914592</td>\n",
+              "      <td>9.513096</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16-20</th>\n",
+              "      <td>6.451613</td>\n",
+              "      <td>2.537291</td>\n",
+              "      <td>15.447516</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21-50</th>\n",
+              "      <td>13.461538</td>\n",
+              "      <td>6.676882</td>\n",
+              "      <td>25.273320</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "SIZE_BIN\n",
-              "<5        2.257336\n",
-              "6-10      3.731343\n",
-              "11-15     5.319149\n",
-              "16-20     6.451613\n",
-              "21-50    13.461538\n",
-              "Name: HAS_DEATH, dtype: float64"
+              "          death_rate  ci_lower   ci_upper\n",
+              "SIZE_BIN                                 \n",
+              "<5          2.257336  1.230672   4.104880\n",
+              "6-10        3.731343  2.039201   6.731153\n",
+              "11-15       5.319149  2.914592   9.513096\n",
+              "16-20       6.451613  2.537291  15.447516\n",
+              "21-50      13.461538  6.676882  25.273320"
             ]
           },
-          "execution_count": 51,
           "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "display_data"
         }
       ],
       "source": [
+        "from statsmodels.stats.proportion import proportion_confint\n",
+        "\n",
         "grouped = exped_tidy.groupby('SIZE_BIN')['HAS_DEATH']\n",
         "death_rate = (grouped.sum() / grouped.size()) * 100\n",
         "death_rate = death_rate[grouped.size() > 0]  # remove bins with zero expeditions\n",
         "death_rate\n",
         "\n",
+        "# Compute deaths and n using your existing grouping\n",
+        "deaths = grouped.sum()\n",
+        "n = grouped.size()\n",
+        "\n",
+        "# mask for non-zero groups (same mask you use)\n",
+        "mask = n > 0\n",
+        "\n",
+        "# 95% CI (Wilson)\n",
+        "lower, upper = proportion_confint(deaths[mask], n[mask], alpha=0.05, method='wilson')\n",
+        "\n",
+        "# Convert to percentages\n",
+        "ci_lower = lower * 100\n",
+        "ci_upper = upper * 100\n",
+        "\n",
+        "results = pd.DataFrame({\n",
+        "    'death_rate': death_rate,\n",
+        "    'ci_lower': ci_lower,\n",
+        "    'ci_upper': ci_upper\n",
+        "})\n",
+        "\n",
+        "display(results)\n",
+        "\n",
         "# Death rate depends not just on number of deaths, but also on number of \n",
         "# expeditions in that size bin. Big groups might have fewer expeditions, \n",
-        "# so the rate can look disproportionately high."
+        "# so the rate can look disproportionately high. Death rate increases as \n",
+        "# expedition size increases. Given the data, the true death rate for\n",
+        "# groups of 21-50 people could be as low as 7% or as high as 25%.\n",
+        "# This group has a wide estimate because of its limited sample and high\n",
+        "# variability."
       ]
     },
     {
