--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -8508,7 +8508,7 @@
         "deaths = grouped.sum()\n",
         "n = grouped.size()\n",
         "\n",
-        "# mask for non-zero groups (same mask you use)\n",
+        "# mask out bins with zero expeditions so deaths, n, and death_rate stay aligned\n",
         "mask = n > 0\n",
         "\n",
         "# 95% CI (Wilson)\n",
@@ -8533,6 +8533,53 @@
         "# groups of 21-50 people could be as low as 7% or as high as 25%.\n",
         "# This group has a wide estimate because of its limited sample and high\n",
         "# variability."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "          deaths  no_death\n",
+            "SIZE_BIN                  \n",
+            "<5            10       433\n",
+            "6-10          10       258\n",
+            "11-15         10       178\n",
+            "16-20          4        58\n",
+            "21-50          7        45\n",
+            "Chi2 statistic: 17.296649142131276\n",
+            "p-value: 0.0016925139848650338\n"
+          ]
+        }
+      ],
+      "source": [
+        "# ----------------------------------------------------------\n",
+        "# Chi-square test for difference in death rates across bins\n",
+        "# ----------------------------------------------------------\n",
+        "# Build contingency table with deaths and no-deaths per SIZE_BIN\n",
+        "\n",
+        "from scipy.stats import chi2_contingency\n",
+        "\n",
+        "# create contingency table\n",
+        "table = pd.DataFrame({\n",
+        "    'deaths': deaths[mask],\n",
+        "    'no_death': n[mask] - deaths[mask]\n",
+        "})\n",
+        "\n",
+        "# print(table)\n",
+        "\n",
+        "# run chi-square test\n",
+        "chi2, pval, dof, expected = chi2_contingency(table)\n",
+        "\n",
+        "print(\"Chi2 statistic:\", chi2) # measure of deviation from expected counts\n",
+        "print(\"p-value:\", pval)         # significance of difference in death rates\n",
+        "\n",
+        "# The death rate increase with expedition size is statistically significant.\n",
+        "# You can now confidently report that size matters for expedition fatality risk"
       ]
     },
     {
