--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -8536,6 +8536,169 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Hypothesis Testing Guide\n",
+        "\n",
+        "## 1. What a hypothesis test is\n",
+        "\n",
+        "A hypothesis test is a formal procedure to decide whether observed data provides enough evidence to support or reject a claim about a population.\n",
+        "\n",
+        "### Key steps:\n",
+        "1. State the null hypothesis (H₀) — usually \"no effect\" or \"no difference\".\n",
+        "2. State the alternative hypothesis (H₁ or Ha) — what you want to test for.\n",
+        "3. Choose a significance level (α) — often 0.05.\n",
+        "4. Compute a test statistic from your data.\n",
+        "5. Compute the p-value — probability of observing your data (or more extreme) if H₀ is true.\n",
+        "6. Compare p-value to α to reject or fail to reject H₀.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2. Types of hypothesis tests\n",
+        "\n",
+        "I'll categorize them by data type and scenario.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### A. Tests for one sample\n",
+        "\n",
+        "#### 1. One-sample t-test\n",
+        "- **Use when:** You want to test if the mean of a single sample differs from a known or hypothesized value.\n",
+        "- **Example:** Is the average age of climbers in <5 group different from 35 years?\n",
+        "- **Data requirement:** Continuous, roughly normal (or large sample).\n",
+        "\n",
+        "```python\n",
+        "from scipy.stats import ttest_1samp\n",
+        "ttest_1samp(data, popmean=35)\n",
+        "```\n",
+        "\n",
+        "#### 2. One-sample proportion test\n",
+        "- **Use when:** You want to test if a proportion differs from a hypothesized value.\n",
+        "- **Example:** Is the death rate in <5 group different from 2%?\n",
+        "- **Data requirement:** Count data (success/failure, 0/1).\n",
+        "\n",
+        "```python\n",
+        "from statsmodels.stats.proportion import proportions_ztest\n",
+        "proportions_ztest(count, nobs, value=0.02)\n",
+        "```\n",
+        "\n",
+        "#### 3. One-sample binomial test (exact)\n",
+        "- Same as above but for small samples or rare events, more precise.\n",
+        "\n",
+        "```python\n",
+        "from scipy.stats import binom_test\n",
+        "binom_test(count, nobs, p=0.02)\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### B. Tests for comparing two groups\n",
+        "\n",
+        "#### 1. Two-sample t-test\n",
+        "- **Use when:** Compare means of two independent samples.\n",
+        "- **Example:** Is the average death rate in <5 different from 6–10?\n",
+        "- **Data requirement:** Continuous, normal-ish, independent samples.\n",
+        "\n",
+        "```python\n",
+        "from scipy.stats import ttest_ind\n",
+        "ttest_ind(group1, group2)\n",
+        "```\n",
+        "\n",
+        "#### 2. Paired t-test\n",
+        "- **Use when:** Compare means of the same subjects under two conditions.\n",
+        "- **Example:** Weight before vs. after an intervention.\n",
+        "- **Data requirement:** Continuous, paired observations.\n",
+        "\n",
+        "```python\n",
+        "from scipy.stats import ttest_rel\n",
+        "ttest_rel(before, after)\n",
+        "```\n",
+        "\n",
+        "#### 3. Two-sample proportion test\n",
+        "- **Use when:** Compare proportions between two groups.\n",
+        "- **Example:** Is death rate different between <5 and 6–10?\n",
+        "- **Data requirement:** Counts of success/failure.\n",
+        "\n",
+        "```python\n",
+        "proportions_ztest([count1, count2], [n1, n2])\n",
+        "```\n",
+        "\n",
+        "#### 4. Chi-square test of independence\n",
+        "- **Use when:** Compare categorical variables in a contingency table.\n",
+        "- **Example:** Are death counts dependent on SIZE_BIN?\n",
+        "- **Data requirement:** Counts (categorical), independent observations.\n",
+        "\n",
+        "```python\n",
+        "from scipy.stats import chi2_contingency\n",
+        "chi2_contingency(table)\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### C. Tests for more than two groups\n",
+        "\n",
+        "#### 1. ANOVA (Analysis of Variance)\n",
+        "- **Use when:** Compare means of 3+ independent groups.\n",
+        "- **Example:** Compare mean death rates across all SIZE_BIN groups.\n",
+        "- **Data requirement:** Continuous, roughly normal, similar variance.\n",
+        "\n",
+        "```python\n",
+        "from scipy.stats import f_oneway\n",
+        "f_oneway(group1, group2, group3)\n",
+        "```\n",
+        "\n",
+        "#### 2. Kruskal-Wallis test (non-parametric ANOVA)\n",
+        "- **Use when:** Data is not normally distributed, compare 3+ groups.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### D. Non-parametric tests (distribution-free)\n",
+        "- **Mann-Whitney U** → two independent groups\n",
+        "- **Wilcoxon signed-rank** → paired observations\n",
+        "- **Kruskal-Wallis** → 3+ groups\n",
+        "\n",
+        "Use these when your data doesn't meet normality assumptions.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### E. Special tests\n",
+        "- **Correlation tests:** Pearson (linear), Spearman (rank-based)\n",
+        "- **Regression coefficients significance** → t-tests on coefficients\n",
+        "- **Survival analysis tests:** Log-rank test for comparing survival curves\n",
+        "- **Extreme value / rare events tests:** EVT or Poisson tests\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 3. When to use hypothesis testing\n",
+        "\n",
+        "Use hypothesis testing when you want to make an inference about a population based on a sample.\n",
+        "\n",
+        "### Examples:\n",
+        "\n",
+        "| Scenario | Test type |\n",
+        "|----------|-----------|\n",
+        "| Is the death rate in <5 significantly different from 2%? | One-sample proportion test |\n",
+        "| Does death rate differ between <5 and 6–10? | Two-sample proportion test |\n",
+        "| Are death rates different across all SIZE_BINs? | Chi-square test or ANOVA |\n",
+        "| Is the average height of climbers <5 bin different from the overall average? | One-sample t-test |\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 4. How to decide which test to use\n",
+        "\n",
+        "1. **Check your data type:** continuous vs categorical.\n",
+        "2. **Check number of groups:** 1 group, 2 groups, 3+ groups.\n",
+        "3. **Check assumptions:** normality, independence, sample size.\n",
+        "4. **Pick test accordingly:**\n",
+        "   - Continuous + 1 group → one-sample t-test\n",
+        "   - Continuous + 2 groups → two-sample t-test\n",
+        "   - Categorical + 1 group → binomial test\n",
+        "   - Categorical + 2 groups → two-proportion z-test\n",
+        "   - Categorical + 3+ groups → chi-square test"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
